fixed layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 * {
-  /* font-family: 'Montserrat', sans-serif; */
+  font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
 }
 
@@ -51,7 +51,7 @@ body {
 .title p {
   font-size: 20px;
   font-weight: normal;
-  line-height: 1;
+  line-height: 1.5em;
   padding-top: 1em;
   text-transform: uppercase;
   padding-left: 20px;
@@ -127,6 +127,10 @@ body {
     top: 10%;
     transform: translateY(0);
   }
+
+  .bottom {
+    bottom: 12%;
+  }
   
  }
 
@@ -148,7 +152,6 @@ body {
 
   .bottom {
     flex-direction: row;
-    bottom: 15%;
   }
 
  }
